<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ISN</string>
 
    <string name="action_settings">Settings</string>
       <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="compose_email">Via E-mail</string>
    <string name="make_call">Contact Us</string>
    
    <string name="hello_world">Login Screen</string>
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login:</string>
   <string name="attempts">Attempts Left:</string>
   <string name="contact">www.mohitatul0803@gmail.com</string>
    

</resources>
